--- a/InForno/Content/Site.css
+++ b/InForno/Content/Site.css
@@ -23,9 +23,14 @@ nav {
         nav a:hover {
             color: black !important;
         }
+
+        html {
+            min-height:100vh;
+        }
 body {
     background-image: url(./assets/bg.jpg);
     backdrop-filter: contrast(0.3);
+    min-height: 100vh;
 }
 
 .card, .card th,.card td {
