Added Remove button in Cart

--- a/InForno/Views/Home/Index.cshtml
+++ b/InForno/Views/Home/Index.cshtml
@@ -40,11 +40,13 @@
             <div class="card-body">
                 @if (ViewBag.Carrello != null)
                 {
-                    foreach (InForno.Models.Cart p in ViewBag.Carrello)
+                    for (int i = 0; i < ViewBag.Carrello.Count; i++)
                     {
+                        InForno.Models.Cart p = ViewBag.Carrello[i];
                         <div>
                             <p class="fw-bold my-0">@p.Nome</p>
-                            <p class="my-0">x(@p.Quantita) $@(p.CostoProdotto*p.Quantita +p.CostoAggiunzione*p.Quantita)</p>
+                            <p class="my-0">x(@p.Quantita) $@(p.CostoProdotto * p.Quantita + p.CostoAggiunzione * p.Quantita)</p>                          
+                                @Html.ActionLink("Rimuovi", "Remove", "Home", new {id = i} , new { @class = "btn my-2" })
                         </div>
                         <hr />
                     }
