--- a/InForno/Views/Prodotto/Edit.cshtml
+++ b/InForno/Views/Prodotto/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2 class="text-center">Modifica Pizza</h2>
 
 <div class="card">
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Prodotto", FormMethod.Post, new { @enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -27,7 +27,7 @@
             <div class="form-group mx-4">
                 @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Foto, new { htmlAttributes = new { @class = "form-control", type="file" } })
                     @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
                 </div>
             </div>
